# rabbitmq-fuse

./: .gitignore  Cargo.toml  Dockerfile  README.md  coverage.sh  pixi.toml  polyfuse.patch
conda-recipe/: build.sh  meta.yaml
lapin-pool/: Cargo.toml  build.rs
lapin-pool/examples/: clap.rs  connection_external.rs  connection_plain.rs  connection_pool.rs  plain_tls.rs
lapin-pool/src/: builder.rs  cli.rs  connection.rs  lib.rs  options.rs  pool.rs
lapin-pool/tests/: connection_external.rs  connection_plain.rs  plain_password_file.rs  plain_tls.rs
rabbitmq-fuse/: Cargo.toml  build.rs
rabbitmq-fuse/benches/: write.rs
rabbitmq-fuse/proptest-regressions/amqp_fs/: table.txt
rabbitmq-fuse/src/: buffer_manager.rs  cli.rs  jemalloc.rs  main.rs  metrics.rs  prometheus.rs  telemetry.rs
rabbitmq-fuse/src/amqp_fs/: buffer.rs  descriptor.rs  dir_entry.rs  dir_iter.rs  filesystem.rs  kafka.rs  mod.rs  publisher.rs  reply.rs  table.rs
rabbitmq-fuse/src/amqp_fs/kafka/: command.rs  endpoint.rs  mod.rs  topic.rs
rabbitmq-fuse/src/amqp_fs/rabbit/: message.rs  mod.rs  options.rs
rabbitmq-fuse/src/amqp_fs/rabbit/amqp_node/: mod.rs
rabbitmq-fuse/src/amqp_fs/rabbit/amqprs/: auth.rs  command.rs  connection.rs  endpoint.rs  mod.rs  returns.rs
rabbitmq-fuse/src/amqp_fs/rabbit/lapin/: command.rs  endpoint.rs  headers.rs  metrics.rs  mod.rs
rabbitmq-fuse/tests/: write_test.rs
src/: cli.rs  main.rs  prometheus.rs  session.rs
src/amqp_fs/: buffer.rs  connection.rs  descriptor.rs  dir_entry.rs  dir_iter.rs  filesystem.rs  message.rs  mod.rs  options.rs  publisher.rs  rabbit.rs  table.rs
src/amqp_fs/rabbit/: amqprs.rs  amqprs_cb.rs  amqprs_ep.rs  connection.rs  endpoint.rs  lapin.rs  message.rs  mod.rs  options.rs
src/amqp_fs/rabbit/amqprs/: connection.rs  endpoint.rs  mod.rs  returns.rs
src/amqp_fs/rabbit/lapin/: connection.rs  endpoint.rs  mod.rs
test/: enabled_plugins  rabbitmq.conf  test.sh
test_all/: definitions.json  rabbitmq.conf
tests/: write_test.rs
