

[package]
name = "rabbitmq-fuse"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyfuse = "0.4"


anyhow = "1"
bytes = "1.1"
futures = "0.3"
libc = "0.2"
tokio = { version = "1", features = [ "macros", "net", "rt-multi-thread" , "sync" ] }
tokio-amqp="1"
tokio-util={ version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["std", "env-filter"]}
lapin = "1.10"
native-tls = "0.2"
# pinky-swear = "6"
dashmap = "< 5.3.0" # 5.3 adds hashbrown, which requires nightly
clap = {version = "3", features = ["derive"]}
rpassword = "6.0"