

[package]
name = "rabbitmq-fuse"
version = "0.2.0"
edition = "2021"

[features]
amqprs_endpoint = ["dep:amqprs", "dep:amqp_serde"]
lapin_endpoint = ["dep:lapin"]
prometheus_metrics = ["dep:prometheus-client", "dep:hyper", "dep:lazy_static"]
lapin-hack = []
default = ["lapin_endpoint"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyfuse = "0.4"
anyhow = "1"
async-trait = "0.1.59"
bytes = "1.1"
futures = "0.3"
libc = "0.2"
tokio = { version = "1", features = [ "macros", "net", "rt-multi-thread" , "sync", "signal" ] }
tokio-util={ version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["std", "env-filter"]}
native-tls = "0.2"
dashmap = "< 5.3.0"
clap = {version = "< 3.1.18", features = ["derive"]}
rpassword = "6.0"
ctrlc = "3"
serde = "1"
serde_json = {version="1.0.81"}
amq-protocol-types = {version="7"}
thiserror="1"
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
deadpool = "0.9" 
amq-protocol-uri = "7.0.1"
daemonize = ">=0.5"
signal-hook = "0.3.14"
tracing-appender = "0.2.2"
amqp_serde = {version="0.3", optional=true}
url = "2.3.1"
lazy_static = { version = "1.4.0", optional=true }
hyper = { version = "0.14.26", features = ["server", "http1", "tcp"] , optional=true }
prometheus-client = { version = "0.20.0", optional=true }
os_pipe = "1.1.4"
bincode = "1.3.3"

[dependencies.lapin]
# path="../lapin/" 
version="2"
features=["native-tls"]
optional=true

[dependencies.amqprs]
version="1.1.0"
# We need a patched version of amqprs for External auth support
# path="../../Downloads/amqprs/amqprs"
features=["tls"]
optional=true

[dev-dependencies]
rand = "0.8"
assert_cmd = "2.0"
predicates = "*"
tempdir = "*"
nix = "*"
