[package]
name = "lapin-pool"
version = "0.1.0"
edition = "2021"

[features]
deadpool = ["dep:deadpool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amq-protocol-uri = "7.1.2"
anyhow = "1.0.75"
native-tls = "0.2.11"
rpassword = "7.2.0"
thiserror = "1.0.47"
tracing = "0.1.37"
url = "2.4.0"


[dependencies.lapin]
version="2"
features=["native-tls"]
optional=false


[dependencies.deadpool]
version="0.9"
optional=true

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
anyhow = "*"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
