[package]
name = "lapin-pool"
version = "0.3.0"
edition = "2021"

[features]
## Enable [`ConnectionBuilder`] to produce a managed
## [`deadpool`](https://docs.rs/deadpool/0.9.5/deadpool/) connection
## pool. This allows for re-opening closed connections and maintaining
## multiple connections to the same server. Call
## [`ConnectionBuilder::pool`] instead of [`ConnectionBuilder::opener`]
deadpool = ["dep:deadpool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amq-protocol-uri = ">=7"
native-tls = "0.2.11"
rpassword = "7.2.0"
thiserror = "1.0.47"
tracing = "0.1.37"
url = "2.3.0"
document-features = { worksapce=true }
rustc_version = "0.4.0"
miette = "^5"


[dependencies.lapin]
version="2"
features=["native-tls"]
optional=false


[dependencies.deadpool]
version=">=0.10"
optional=true

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rustc_version = "0.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
eyre = "0.6.9"
tempfile = "3.8.1"

[build-dependencies]
rustc_version = "0.4.0"

[[example]]
name = "connection_pool"
required-features = ["deadpool"]
