[package]
name = "lapin-pool"
version = "0.4.0"
edition = "2021"

[features]
## Enable [`ConnectionBuilder`] to produce a managed
## [`deadpool`](https://docs.rs/deadpool/0.9.5/deadpool/) connection
## pool. This allows for re-opening closed connections and maintaining
## multiple connections to the same server. Call
## [`ConnectionBuilder::pool`] instead of [`ConnectionBuilder::opener`]
deadpool = ["dep:deadpool"]
## Enable [`clap`](https://docs.rs/clap/4.5.4/clap/) based
## command-line parsing. Just add [`ConnectionArgs`] to your parse
## struct using `#[command(flatten)]` to generate all the needed
## options
clap = ["dep:tokio-executor-trait", "dep:tokio-reactor-trait", "dep:clap"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = { version="0.2.11" }
rpassword = "7.2.0"
thiserror = "1.0.47"
tracing = "0.1.37"
url = "2.3.0"
document-features = { workspace = true }
miette = "^5"
clap = { version = "4.5.4", features = ["derive"] ,optional=true}
tokio-executor-trait = {version ="2.1.1", optional=true}
tokio-reactor-trait = {version="1.1.0", optional=true}


[dependencies.lapin]
version="2"
features=["native-tls"]
optional=false


[dependencies.deadpool]
version=">=0.10"
optional=true

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rustc_version = "0.4.0"
miette = { version = "5.10.0", features = ["fancy"] }
eyre = "0.6.9"
tempfile = "3.8.1"

[build-dependencies]
rustc_version = "0.4.0"

[[example]]
name = "connection_pool"
required-features = ["deadpool"]

[[example]]
name = "clap"
required-features = ["clap", "native-tls/vendored"]